<resources>
    <string name="app_name">NewsSampleApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sport News</string>
    <string name="nav_header_subtitle">ravan.latifli@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Новости</string>
    <string name="football">Футбол</string>
    <string name="basketball">Баскетбол</string>
    <string name="volleyball">Волейбол</string>
    <string name="hockey">Хоккей</string>
    <string name="sport_news">Sport News</string>
    <string name="coefficient">Коэффициент:</string>
    <string name="settings">Настройки</string>
    <string name="about_us">О нас</string>
    <string name="additional">Дополнительно</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
